--- a/style.css
+++ b/style.css
@@ -1,137 +1,207 @@
 :root {
-	--main-black: #09090c;
-	--main-white: #fff;
+	--main-background: #09090c;
+	--main-white: rgb(255, 255, 255);
 	--main-green: #52c04b;
 	--main-blue: #125bec;
+
+	--card-height: 597px;
+	--card-width: 402px;
+}
+
+@font-face {
+	font-family: "TT Norms Pro";
+	src: url("src/fonts/TTNormsPro-Regular.ttf");
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: "TT Norms Pro";
+	src: url("src/fonts/TTNormsPro-Bold.ttf");
+	font-weight: bold;
 }
 
 body {
-	background: var(--main-black);
+	background-color: var(--main-background);
 	color: var(--main-white);
-	display: flex;
+
+	display: grid;
+	grid-template-columns: 164px calc(1920px - 164px);
+	grid-template-areas: "header main";
+
+	margin: 0;
+
+	width: 1920px;
+
+	font-family: "TT Norms Pro", sans-serif;
 }
 
+p {
+	margin: 0;
+}
+
+.logo {
+	height: 50px;
+	width: 50px;
+
+	background-image: url("src/icons/logo.svg");
+	background-position: 10px 0;
+
+}
 header {
+	grid-column: span 1;
+	grid-row: 1 / -1;
+	grid-area: header;
+	
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 10px;
-	margin: 20px;
-}
-
-nav {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
+	
 }
 
 ul {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	list-style: none;
+
 	padding: 0;
+	margin: 0;
+
+	list-style: none;
+
 }
 
-.icon {
-	width: 30px;
-	height: 30px;
-}
+main {
+	grid-area: main;
 
-img {
 	width: 100%;
-	height: 100%;
+	/* display: flex;
+	flex-direction: column; */
 }
 
-.news {
+.hero {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	justify-content: end;
+	align-items: center;
+
+	height: 800px;
+
+	background-image: url("src/images/cover-background.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: right top;
+
+	text-align: center;
 }
+
+.hero-description {
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+
+	width: 886px;
+}
+
+.hero-title {
+	font-weight: bold;
+	font-size: 40px;
+}
+
+button {
+	width: 243px;
+	height: 80px;
+
+	border: 0;
+	border-radius: 16px;
+
+	font-size: 30px;
+	color: var(--main-white);
+}
+
+.button-secondary {
+	background-color: rgba(255 255 255 / 0.2);
+
+	color: var(--main-white);
+}
+
+.gradient {
+	background: linear-gradient(90deg,#6A11CB, #2575FC);
+}
+
 
 .card-container {
-	display: flex;
-	flex-direction: row;
-	gap: 10px;
-}
+	position: relative;
 
-.content {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-}
+	height: 728px;
 
-.cover {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	height: 90%;
-	border: 1px solid var(--main-green);
-	background: url("./src/images/cover-background.png") right / auto;
-}
-
-.cover-image {
-	width: 576px;
-	height: 228px;
+	gap: 44px;
 }
 
 .film-card {
-	border: 1px solid var(--main-blue);
-	background: center;
-	background-size: cover;
-	background-repeat: no-repeat;
+	height: var(--card-height);
+	width: var(--card-width);
+	z-index: 3;
+
+	box-sizing: border-box;
+
+	position: relative;
 }
 
-.film-card > img {
-	width: 100%;
+.film-card img {
 	height: 100%;
 }
 
-.range-card {
+.film-card:hover ~ .film-card .card-wrapper::before {
+	content: "";
+	position: absolute;
+	top: -8px;
+	left: -8px;
+	z-index: -2;
+
+	height: calc(597px + 16px);
+	width: calc(403px + 16px);
+
+
+	background: linear-gradient(135deg, #6A11CB, #2575FC);
+	border-radius: 28px;
+
+	transition: 0.5s;
+}
+
+.film-card.hover::after {
+	content: "";
+	position: absolute;
+	top: -4px;
+	left: -4px;
+	z-index: -1;
+
+	height: calc(var(--card-height) + 8px);
+	width: calc(var(--card-width) + 4px);
+
+	background: var(--main-green);
+	border-radius: 22px;
+
+	transition: 0.5s;
+}
+
+.rating-label {
+	position: absolute;
+	top: 28px;
+	left: 28px;
+
 	display: flex;
-	align-items: center;
-}
-
-.range-symbol {
-	-webkit-text-stroke-width: 4;
-	-webkit-text-stroke-color: #000;
-	font-family: Archivo;
-	font-size: 100px;
-	font-style: italic;
-	font-weight: 900;
-	line-height: normal;
-}
-
-.cover-buttons {
-	display: flex;
-	align-items: flex-start;
-	gap: 24px;
-}
-
-.button {
-	border-radius: 16px;
-	background: var(--gradient-white-50, linear-gradient(180deg, rgba(255, 255, 255, 0.10) 0%, rgba(255, 255, 255, 0.13) 50%, rgba(255, 255, 255, 0.10) 100%));
-	/* bg blur 20 */
-	backdrop-filter: blur(10px);
-	height: 80px;
-	padding: 24px 32px;
 	justify-content: center;
-	display: flex;
 	align-items: center;
-	gap: 8px;
-	flex: 1 0 0;
-}
 
-.button-title {
-	color: var(--Main-White, #FFF);
-	text-align: center;
-	font-family: "TT Norms Pro";
-	font-size: 30px;
-	font-style: normal;
-	font-weight: 500;
-	line-height: normal;
-}
+	width: 78px;
+	height: 48px;
 
-.active-button {
-	background: var(--Gradient-Accent, linear-gradient(90deg, #6A11CB 0%, #2575FC 100%));
+	border-radius: 12px;
+
+	font-size: 28px;
 }
