--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-:root {
-	--main-background: #09090c;
-	--main-white: rgb(255, 255, 255);
-	--main-green: #52c04b;
-	--main-blue: #125bec;
-
-	--card-height: 597px;
-	--card-width: 402px;
-}
-
 @font-face {
 	font-family: "TT Norms Pro";
 	src: url("src/fonts/TTNormsPro-Regular.ttf");
@@ -20,19 +10,36 @@
 	font-weight: bold;
 }
 
+@font-face {
+	font-family: Archivo;
+	src: url("src/fonts/Archivo-Italic.ttf");
+}
+
+:root {
+	--main-background: #09090c;
+	--main-white: rgb(255, 255, 255);
+	--main-green: #52c04b;
+	--main-blue: #125bec;
+	--second-family: "Archivo", sans-serif;
+
+	/* --card-height: 597px;
+	--card-width: 398px; */
+}
+
+
 body {
 	background-color: var(--main-background);
 	color: var(--main-white);
 
-	display: grid;
-	grid-template-columns: 164px calc(1920px - 164px);
-	grid-template-areas: "header main";
+	display: flex;
 
-	margin: 0;
-
-	width: 1920px;
+	margin: 0 0 203px;
 
 	font-family: "TT Norms Pro", sans-serif;
+}
+
+.content {
+	width: calc(1920px - 164px);
 }
 
 p {
@@ -48,21 +55,26 @@ p {
 
 }
 header {
-	grid-column: span 1;
-	grid-row: 1 / -1;
-	grid-area: header;
-	
+	width: 164px;
+	padding-top: 40px;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 10px;
-	
+	gap: 110px;
+
 }
 
+nav {
+	height: 800px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
 ul {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 28px;
 
 	padding: 0;
 	margin: 0;
@@ -86,6 +98,7 @@ main {
 	align-items: center;
 
 	height: 800px;
+	padding-bottom: 24px;
 
 	background-image: url("src/images/cover-background.png");
 	background-size: contain;
@@ -97,18 +110,30 @@ main {
 
 .hero-description {
 	position: absolute;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
+	left: calc((1920px - 886px) / 2);
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 
 	width: 886px;
+	height: 482px;
+}
+
+.hero-image {
+	width: 576px;
+	height: 228px;
 }
 
 .hero-title {
-	font-weight: bold;
+	font-weight: 500;
 	font-size: 40px;
+}
+
+.hero-buttons {
+	display: flex;
+	gap: 24px;
 }
 
 button {
@@ -132,28 +157,53 @@ button {
 	background: linear-gradient(90deg,#6A11CB, #2575FC);
 }
 
+.carousel-news {
+	padding-top: 71px;
+	margin-bottom: 110px;
+}
+
+.news-title {
+	font-weight: 700;
+	font-size: 40px;
+}
 
 .card-container {
 	position: relative;
 
-	height: 728px;
+	margin-top: 24px;
+
+	overflow: scroll;
+	box-sizing: border-box;
 
 	display: flex;
 	gap: 44px;
+	flex-wrap: nowrap;
 }
 
 .film-card {
 	height: var(--card-height);
 	width: var(--card-width);
-	z-index: 3;
-
-	box-sizing: border-box;
 
 	position: relative;
+	z-index: 3;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
+	box-sizing: border-box;
 }
 
 .film-card img {
-	height: 100%;
+	/* height: 100%; */
+	width: 398px;
+
+	border-radius: 24px;
+}
+
+.film-card-title {
+	font-weight: 500;
+	font-size: 28px;
 }
 
 .film-card:hover ~ .film-card .card-wrapper::before {
@@ -204,4 +254,31 @@ button {
 	border-radius: 12px;
 
 	font-size: 28px;
+}
+
+.news-title::before {
+	content: attr(data-item) " ";
+}
+
+.range-card {
+	position: relative;
+
+	display: flex;
+	justify-content: end;
+	align-items: center;
+
+	width: 559px;
+}
+
+.range-card::before {
+	content: attr(data-item);
+
+	position: relative;
+	left: 70px;
+	z-index: -5;
+
+	font-family: var(--second-family);
+	font-style: italic;
+	font-weight: 900;
+	font-size: 360px;
 }
